2009-04-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/interp-proclaims.lisp: Regenerate.

2009-04-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/hyper/pages/releaseNotes.ht, src/input/test.input.pamphlet:
	Last minute changes.

2009-04-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/hyper/pages/releaseNotes.ht: Update for 1.0.6.

2009-04-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/genufact.spad.pamphlet: Fix SF/2521387.

2009-04-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/ystream.spad.pamphlet,
	src/algebra/stream.spad.pamphlet, src/interp/setq.lisp:
	Detect and report uninitialized streams.

2009-04-21  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/mantepse.spad.pamphlet: developer documentation
	improvements, more debugging messages

2009-04-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
            Anonymous Axiom wiki contibutor

	* src/interp/i-coerce.boot, src/interp/i-funsel.boot,
	src/interp/i-resolv.boot: Fix issues 122, 136 and 435.

	Martin Rubey  <martin.rubey@univie.ac.at>
	* src/input/i-bugs2009.input.pamphlet,
	src/input/bugs2009.input.pamphlet: add issue numbers

2009-04-15  Gabriel Dos Reis  <gdr@cs.tamu.edu>
            Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot, src/share/doc/msgs/s2-us.msgs:
	Signal error if no digit follow radix specification.

2009-04-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* contrib/debian/mk_deb: Update.

2009-04-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/mark.boot: Add leading zero.

2009-04-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/scripts/find-algebra-files: Use 'grep -E' if
	this works.

2009-04-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/kl.spad.pamphlet: Fix issue 443.
	src/input/bugs2009.input.pamphlet: add test.
	src/input/mantepse.input.pamphlet: correct expected().

2009-04-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
