@@ -1,3 +1,8 @@
+2009-04-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/lisp/fricas-lisp.lisp, src/lisp/fricas-package.lisp:
+	Add exit with status.
+
 2009-04-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/interp-proclaims.lisp: Regenerate.
